 - added ident and host to akill message in #services chan.
 - Forgot to put in /help set akilltime
 - Kicks are now handled (Fixes that Hu, user isn't a part of xxx messages)
 - Notices are now processed by the bots
 - Check Exempts for PM's and Notices is now performed.
 - Akill times can be set larger than 10,000 seconds now BUGID: 31
 - Disabling Version check didn't actuall disable it. Fixed. BugID: 24
 - Moved is_pub_chan into NeoStats core, as there is more checking than I though. BugID: 33
 - Channel Locking is implemented
 - Added a feature to enable admins to edit the botlist online
 - Added the ability to assign bots to channels, to stay in there full time.
 - SecureServ supports the new API version interface, and __ModInit, __ModFini function calls of NeoStats
 - When a user joins a channel, user exemptions are checked as well as channel exemptions.
 
0.9.2 - Fish - 03 June, 2003
 - Fixed the hash_insert problem that was crashing NeoStats. Was happening with NickChanges
 - Fixed a type on the set verbose on message. 
 - Fixed DoOnJoin Setting. 
 - Added new option to not join Private Channels
 - fixed a bug with trying to signoff virtual bots after they had already been signed off!
 - Fixed a bug with IRCd's that use Tokens, and Version's not getting checked. Reported by Tank. 

0.9.1 - Fish - 25 May, 2003
 - Onjoin bot wasn't checking the last Onjoin Definition. Fixed. 
 - Fixed a problem with Matched channels in new_chan code. Re-Arranged Join_Chan code instead.
 - Fixed a problem with "Definitions count" after a update
 - AutoUpgrade now works
 - Messages recieved by the onjoinbot are now dumped into the logfile
 - Fixed a problem with restoring some string settings
 - Updated a bit the Channel Flood Checking. Now also checks the TS of the server to determine if its a flood.
 - NickFlood Checking is now Enabled
 - Changed the order of gotpositive to svsjoin/akill/warn/nothing