@@ -15,6 +15,7 @@ TrojanServ Module for NeoStats Changelog.
  - Added the ability to assign bots to channels, to stay in there full time.
  - SecureServ supports the new API version interface, and __ModInit, __ModFini function calls of NeoStats
  - When a user joins a channel, user exemptions are checked as well as channel exemptions.
+ - Helper interface added, and SVSJOIN code now works!
  
 0.9.2 - Fish - 03 June, 2003
  - Fixed the hash_insert problem that was crashing NeoStats. Was happening with NickChanges
